fix alignment of projects

--- a/src/App.css
+++ b/src/App.css
@@ -702,9 +702,10 @@ h3 {
 }
 .portfolio-section-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 42.6px;
   width: 100%;
+  justify-content: center;
 }
 .portfolio-section-img {
   border-radius: 8px;
